kubeconfigs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebapi
  labels:
    app: mywebapi
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: mywebapi
